--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/icons": "^4.2.1",
     "bootstrap": "^4.3.1",
+    "material-table": "^1.40.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
