--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "dependencies": {
     "@material-ui/icons": "^4.2.1",
+    "antd": "^3.20.5",
     "bootstrap": "^4.3.1",
+    "bootstrap-theme": "^5.0.0",
     "material-table": "^1.40.1",
     "material-ui-icons": "^1.0.0-beta.36",
+    "mdbootstrap": "^4.8.5",
+    "mdbreact": "^4.18.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-notifications": "^1.4.3",
+    "react-popper": "^1.3.3",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
